fix script version mobile

--- a/css/active.css
+++ b/css/active.css
@@ -6,3 +6,9 @@
 .path {
 	transform: scale(1);
 }
+
+@media screen and (max-width: 1150px) {
+	.active {
+		transform: scale(1);
+	}
+}
