--- a/css/container.css
+++ b/css/container.css
@@ -1,5 +1,5 @@
 .container {
-	background-color: var(--bg-section);
+	background-color: var(--color-white);
 	border-radius: 15px;
 }
 
