--- a/css/wrapper_social.css
+++ b/css/wrapper_social.css
@@ -7,7 +7,7 @@
 }
 
 .i_share {
-	background-color: var(--bg-body);
+	background-color: var(--bg-section);
 	border-radius: 50%;
 	box-sizing: border-box;
 	padding: .7rem;
@@ -32,6 +32,7 @@
 		border-radius: 0 0 15px 15px;
 		width: 100%;
 		height: 100%;
+		transform: scale(0);
 
 		left: 0;
 	}
